test/asm/union-mismatch.asm
section union "fixed", wram0[$c001]
section union "fixed", wram0, align[1]
